--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </ul>
         </div>
         <div class="main-content">
-            <h1>ようこそ、私のサイトへ</h1>
+            <h1>Welcone to My Page</h1>
             <p>現在建設中</p>
         </div>
     </div>
