--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <div class="sidebar">
             <div class="profile">
                 <img src="profile.gif" alt="プロフィール画像">
-                <h3>青山 祐之介</h3>
+                <h3>ssr-Aotech</h3>
                 <p>東京工業大学工学院システム制御系 山北研卒</p>
                 <p>筑波大学連携大学院 産総研 ヒューマノイド研究室</p>
             </div>
             <h3>経歴</h3>
-            <p>あなたの経歴や実績をここに記述します。</p>
+            <p>輝かしい経歴</p>
             <h3>ページ一覧</h3>
             <ul>
                 <li><a href="index.html">ホーム</a></li>
